<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/nav_dashboard" />
        <item
            android:id="@+id/nav_tracking"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/nav_tracking" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/nav_schedule" />
    </group>
    <item android:title="@string/nav_support">
        <menu>
            <item
                android:id="@+id/nav_queries"
                android:icon="@drawable/ic_launcher_foreground"
                android:title="@string/nav_queries" />
            <item
                android:id="@+id/nav_announcements"
                android:icon="@drawable/ic_launcher_foreground"
                android:title="@string/nav_announcements" />
            <item
                android:id="@+id/nav_chatbot"
                android:icon="@drawable/ic_launcher_foreground"
                android:title="@string/nav_chatbot" />
        </menu>
    </item>
    <item android:title="@string/nav_account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_launcher_foreground"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>
